--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ text_io = "0.1.12"
 indoc = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+yahoo_finance_api = "1.3.0"
+tokio-test = "0.4.2"
 
 [profile.release]
 # make a small binary - I care much more about small size than speed here
