--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 yahoo_finance_api = "1.3.0"
 tokio-test = "0.4.2"
+rustyline = "10.0.0"
 
 [profile.release]
 # make a small binary - I care much more about small size than speed here
